Remove useless plugins. Add maven-shade-plugin that allows to create an executable jar file.